增加了图标显示

--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <html>
-
 <head>
     <title>圣经CSBS</title>
     <meta charset="utf-8">
+    <link rel="apple-touch-icon" sizes="180x180" href="180x180.png"> 
 </head>
 <body>
 <a href="马太福音CSBS/index.html"  style="font-size: 40px">马太福音CSBS</a>
 </body>
-
-
 </html>
 
