--- a/马太福音CSBS/index.html
+++ b/马太福音CSBS/index.html
@@ -129,6 +129,25 @@
                 top: 10px;
                 right: 10px;
             }
+            pre {
+                width: 100vw; /* 占满整个视口宽度 */
+                max-width: 100vw; /* 确保不会超出视口 */
+                margin-left: calc(-50vw + 50%); /* 使元素居中对齐，并延伸到屏幕边缘 */
+                padding: 10px; /* 添加适当的内边距 */
+                box-sizing: border-box; /* 确保内边距不会增加总宽度 */
+                white-space: pre-wrap; /* 保持换行并允许文本自动换行 */
+                overflow-x: hidden; /* 隐藏水平滚动条 */
+                position: relative; /* 确保定位正确 */
+                left: 0; /* 确保左对齐 */
+            }
+            
+            /* 如果需要，可以调整 pre 的父容器 */
+            body, html, .container, .content-area {
+                padding: 0;
+                margin: 0;
+                width: 100%;
+                overflow-x: hidden; /* 防止水平滚动 */
+            }
         }
 
         /* 拖动手柄样式 */
