--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>圣经CSBS</title>
     <meta charset="utf-8">
     <link rel="apple-touch-icon" sizes="180x180" href="180x180.png"> 
+    <link rel="shortcut icon" href="180x180.png" type="image/png">
 </head>
 <body>
 <a href="马太福音CSBS/index.html"  style="font-size: 40px">马太福音CSBS</a>
